update with new task

--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,15 @@
 - hosts: k8s-master
   become: yes
 
+  collections: 
+    - community.kubernetes
+  
   tasks:
+    - name: GET WORKER NODE DETAILS
+    community.kubernetes.k8s_info:
+      kind: Node
+      namespace: default
+      
     - name: Add Bitnami's chart repository.
       community.kubernetes.helm_repository:
         name: bitnami
