--- a/main.yml
+++ b/main.yml
@@ -1,21 +1,29 @@
 ---
 - hosts: localhost
 
-  collections: 
+  collections:
     - community.kubernetes
-  
   tasks:
     - name: GET WORKER NODE DETAILS
+      environment:
+        K8S_AUTH_KUBECONFIG: /var/lib/awx/.kube/config
+        K8S_AUTH_CONTEXT: kubernetes-dellt30
       community.kubernetes.k8s_info:
         kind: Node
         namespace: default
 
     - name: Add Bitnami's chart repository.
+      environment:
+        K8S_AUTH_KUBECONFIG: /var/lib/awx/.kube/config
+        K8S_AUTH_CONTEXT: kubernetes-dellt30
       community.kubernetes.helm_repository:
         name: bitnami
         repo_url: "https://charts.bitnami.com/bitnami"
 
     - name: Install phpMyAdmin with Helm.
+      environment:
+        K8S_AUTH_KUBECONFIG: /var/lib/awx/.kube/config
+        K8S_AUTH_CONTEXT: kubernetes-dellt30
       community.kubernetes.helm:
         name: phpmyadmin
         chart_ref: bitnami/phpmyadmin
